--- a/src/styles/40-layouts/_box.scss
+++ b/src/styles/40-layouts/_box.scss
@@ -13,20 +13,20 @@
  */
 
 .l-box {
-  // color: var(--box-color, currentColor);
-  // background-color: var(--box-bg, var(--color-global-bg));
-  border: var(--box-border, solid medium transparent);
-  border-radius: var(--box-border-radius, 0);
+  color: var(--box-color, currentColor);
+  background-color: var(--box-bg, transparent);
+  border: var(--box-border, solid transparent var(--border-width));
+  border-radius: var(--box-radius, var(--radius));
   max-inline-size: unset;
   padding: var(--space-box, var(--space-gutter));
   position: relative;
 
   // & * {
-  // color: inherit;
+  //   color: inherit;
   // }
 
-  &[data-box="invert"] {
-    --box-color: var(--color-global-bg);
-    --box-bg: var(--color-global-text);
-  }
+  // &[data-box="invert"] {
+  //   --box-color: var(--color-global-bg);
+  //   --box-bg: var(--color-global-text);
+  // }
 }
